--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ng2-currency-mask": "^4.4.1",
+    "ng2-money-mask": "^1.0.0",
+    "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
