--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.20.1",
     "ng2-currency-mask": "^4.4.1",
     "ng2-money-mask": "^1.0.0",
     "primeng": "^5.0.2",
