--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.20.1",
     "ng2-currency-mask": "^4.4.1",
     "ng2-money-mask": "^1.0.0",
+    "ng2-toasty": "^4.0.3",
     "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
